[gd_scene load_steps=9 format=3 uid="uid://dph7i2tyh2tky"]

[ext_resource type="Script" path="res://scripts/scr_scenes/menu/authors_menu.gd" id="1_m80we"]
[ext_resource type="VideoStream" path="res://visuals/video/menu_space.ogv" id="2_d4tua"]
[ext_resource type="VideoStream" path="res://visuals/video/batman_crazyyy.ogv" id="3_3l5uj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uskgp"]
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="Animation" id="Animation_6xuk0"]
resource_name = "New_text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_ni8lk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_146ma"]
_data = {
"New_text": SubResource("Animation_6xuk0"),
"RESET": SubResource("Animation_ni8lk")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mynh7"]
bg_color = Color(0, 0, 0, 0.756863)

[node name="authors_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m80we")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_d4tua")
autoplay = true
expand = true
loop = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uskgp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 130.0
offset_right = 235.0
offset_bottom = 330.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="A_BackButt" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -232.0
grow_horizontal = 0
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Container"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/RichTextLabel"]
libraries = {
"": SubResource("AnimationLibrary_146ma")
}

[node name="VideoStreamPlayer2" type="VideoStreamPlayer" parent="Container"]
layout_mode = 2
stream = ExtResource("3_3l5uj")
volume_db = -20.0
expand = true
loop = true

[node name="New_TextButt" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 424.0
offset_right = 850.0
offset_bottom = 472.0
theme_override_font_sizes/font_size = 30
text = "Read Next"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 520.0
offset_right = 1089.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 20
text = "Автор игры Кейс (Диана)
И я верю в макаронного монстра."

[node name="GameName" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 64.0
offset_right = 152.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="GameName"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mynh7")

[node name="Label" type="Label" parent="GameName"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Ocean With Stars
author"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/A_BackButt" to="." method="_on_a_back_butt_pressed"]
[connection signal="animation_finished" from="Container/RichTextLabel/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="New_TextButt" to="." method="_on_new_text_butt_pressed"]
